@@ -1972,13 +1972,14 @@ GEN gen_product(GEN x, void *data, GEN (*mul)(void*,GEN,GEN));
 
 int     QR_init(GEN x, GEN *pB, GEN *pQ, GEN *pL, long prec);
 GEN     R_from_QR(GEN x, long prec);
+GEN     RgM_Babai(GEN B, GEN t);
 int     RgM_QR_init(GEN x, GEN *pB, GEN *pQ, GEN *pL, long prec);
+GEN     RgM_gram_schmidt(GEN e, GEN *ptB);
 GEN     Xadic_lindep(GEN x);
 GEN     algdep(GEN x, long n);
 GEN     algdep0(GEN x, long n, long bit);
 void    forqfvec0(GEN a, GEN BORNE, GEN code);
 GEN     gaussred_from_QR(GEN x, long prec);
-GEN     gram_schmidt(GEN e, GEN *ptB);
 GEN     lindep0(GEN x, long flag);
 GEN     lindep(GEN x);
 GEN     lindep2(GEN x, long bit);
