@@ -276,6 +276,7 @@ BA100- [libpari] RgX_Rg_eval_bk, RgX_RgV_eval
 HC102- GP function zetamult
 PB103- ZM_mul: Add Strassen-Winograd algorithm
   104- GP functions sumnummonien/sumnummonieninit
+  105- [libpari] RgM_gram_schmidt, RgM_Babai
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
